--- a/4.html
+++ b/4.html
@@ -7,6 +7,7 @@
 <body>
   <hl><h1>정답입니다. 답:4<br>언더독 효과:절대적인 강자가 존재시 상대적으로 약자가 강자를 이겨 주길 바라는 현상.</h1></h1>
 
-  <h1>다음 QR코드는 예지관 체육부실 앞 화장실문에 있습니다.</h1>
+  <h1>다음 QR코드는 예지관 체육부실 앞 화장실문에 있습니다.</h1><br>
+  <img src="m.jpg" width="70%" height="80%" title="m">
 </body>
 </html>
